# gpt-lab

./: .gitignore  README.md  pyproject.toml  pytest.ini  ref.bib  requirements.txt
.github/workflows/: hf-sync.yml  tests.yml
configs/: data.yaml  optim.yaml
docs/: tokenizer_scaling.md
examples/: train.py
rbpe/: __init__.py
scripts/: benchmark_dataloaders.py  chat_app.py  chat_console.py  clear_gpt_lib_cache.py  make_hf_bucket.py  make_hf_dataset.py  reshard_dataset.py  scaling_tokenizer.py  train_base.py  train_tokenizer.py
scripts/benchmark/: dataloaders.py  tokenizer_corpus_size.py
src/gpt_lab/cli/: main.py
src/gpt_lab/data/: __init__.py  loader.py  sharder.py
src/gpt_lab/evaluate/: __init__.py  bpb.py  core.py
src/gpt_lab/interface/: chat.py  completion.py
src/gpt_lab/model/: __init__.py  auto.py  checkpoint.py  flash_attn.py  gpt.py  layers.py  loss.py  utils.py  wrapper.py
src/gpt_lab/optim/: __init__.py  adamw.py  factory.py  muon.py  registry.py  shampoo.py  strategy.py
src/gpt_lab/optim/kernels/: adahessian.py
src/gpt_lab/optim/strategies/: __init__.py  adamw.py  muon.py
src/gpt_lab/tokenizer/: __init__.py  auto.py  base.py  bpe.py  corpus.py  hf.py  pretokenizer.py  serialization.py  tokenizer.py  truncation.py
src/gpt_lab/train/: __init__.py  base.py  grpo.py  trainer.py  trainer_fsdp.py
src/gpt_lab/utils/: __init__.py  board.py  common.py  default.py  distributed.py  import_utils.py  logging.py  report.py  schemas.py  special_tokens.py  system.py  types.py
src/gpt_lib/cli/: main.py
src/gpt_lib/data/: loader.py  sharder.py
src/gpt_lib/evaluate/: bpb.py  core.py
src/gpt_lib/model/: auto.py  flash_attn.py  fp8.py  gpt.py  layers.py  loss.py  utils.py
src/gpt_lib/optim/: adahessian.py  adamw.py  factory.py  muon.py  optim.py
src/gpt_lib/optimizers/: muon.py
src/gpt_lib/tokenizer/: corpus.py  tokenizer.py
src/gpt_lib/train/: base.py  grpo.py  peft.py  trainer.py  trainer_fsdp.py
src/gpt_lib/utils/: board.py  common.py  default.py  distributed.py  import_utils.py  report.py  schemas.py
tests/: conftest.py  test_checkpoint.py  test_data.py  test_layers.py  test_model.py  test_optim.py  test_tokenizer.py  test_trainer.py
