[project]
name = "gpt-lib"
version = "0.1.0"
description = "This project is the implementation of a small library to manage LLM training and inference from-scratch. It also includes an interface to chat with the model, and with models from 🤗 API, locally or remotly."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.2",
    "gradio>=3.18.0",
    "huggingface-hub>=0.36.0",
    "jinja2>=3.1.6",
    "kernels>=0.11.7",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "psutil>=7.2.2",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "tiktoken>=0.12.0",
    "tokenizers>=0.22.1",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
    "urllib3>=2.6.2",
    "uvicorn>=0.40.0",
    "wandb>=0.25.1",
]

[project.urls]
homepage = "https://github.com/art-test-stack/gpt-lib"
repository = "https://github.com/art-test-stack/gpt-lib"

[dependency-groups]
dev = [
    "pytest",
]

[project.optional-dependencies]
cuda = [
    "flash-attn>=2.6.0; platform_system == 'Linux'",
]
azure = [
    "azure-mgmt-resource>=0.1.0",
]

[tool.setuptools]
package-dir = {"" = "./src/"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
managed = true
package = true
